--- a/frontend/public/locales/en/titles.json
+++ b/frontend/public/locales/en/titles.json
@@ -43,5 +43,6 @@
 	"LOGS_SAVE_VIEWS": "SigNoz | Logs Save Views",
 	"TRACES_SAVE_VIEWS": "SigNoz | Traces Save Views",
 	"DEFAULT": "Open source Observability Platform | SigNoz",
-	"SHORTCUTS": "SigNoz | Shortcuts"
+	"SHORTCUTS": "SigNoz | Shortcuts",
+	"INTEGRATIONS_INSTALLED": "SigNoz | Integrations"
 }
